all plants categories display added

--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
         <div class="md:w-1/5 border-4 border-red-600 p-6 rounded-lg">
             <h2 class="font-bold text-center mb-4">Categories</h2>
 
-            <div id="all-plants" class="active p-2 category-btn">All Plants</div>
+            <div id="all-plants-btn" class="p-2 active">All Plants</div>
 
             <ul id="categories-container"  class="text-sm">
               
@@ -125,6 +125,8 @@
           <div id="cart-container" class="md:w-3/5 grid grid-cols-1 sm:grid-cols-3 gap-4 rounded-lg sm:py-4">
 
           </div>
+
+          
 
             <!-- right cart div -->
              <div id="cart-container" class="md:w-1/5 col-span-3 border-2 border-orange-600 p-4 rounded-lg space-y-2 ">
