--- a/plant.html
+++ b/plant.html
@@ -1,32 +1,146 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-
-    <!-- tailwind and daisyui -->
-    <link
-      href="https://cdn.jsdelivr.net/npm/daisyui@5"
-      rel="stylesheet"
-      type="text/css"
-    />
-    <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
-
-
-
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Tree Shop</title>
+  <!-- Tailwind CSS CDN -->
+  <script src="https://cdn.tailwindcss.com"></script>
 </head>
-<body>
+<body class="bg-gray-50">
 
-    <section class="p-10 w-11/12 items-center mx-auto">
-        <button id="all-plants-btn" class="btn bg-green-600 text-white rounded-3xl px-4 py-2">
-  All Plants
-</button>
+  <section class="py-10">
+    <h1 class="font-bold text-3xl text-center mb-10">Choose Your Trees</h1>
 
-<div id="plant-container" class="grid grid-cols-3 gap-4 mt-4"></div>
-    </section>
- 
-    
-    <script src="./script/plant.js"></script>
+    <div class="flex w-11/12 mx-auto gap-4">
+
+      <!-- Categories Sidebar -->
+      <div class="w-1/5 border-4 border-red-600 bg-red-100 p-6 rounded-lg">
+        <h2 class="font-bold text-center mb-4">Categories</h2>
+        <ul id="categories-list" class="space-y-2 text-sm">
+          <!-- Categories will be dynamically populated -->
+        </ul>
+      </div>
+
+      <!-- Trees Section -->
+      <div id="trees-container" class="w-3/5 grid grid-cols-3 gap-4 border-4 border-blue-600 bg-blue-100 p-4 rounded-lg">
+        <!-- Tree cards will be dynamically populated -->
+      </div>
+
+      <!-- My Cart -->
+      <div id="cart-container" class="w-1/5 border-4 border-orange-600 bg-orange-100 p-6 rounded-lg">
+        <h2 class="font-bold text-center mb-4">My Cart</h2>
+        <ul id="cart-list" class="space-y-2">
+          <li class="text-gray-500">Your cart is empty</li>
+        </ul>
+        <div id="cart-total" class="mt-4 font-bold text-right">Total: $0</div>
+      </div>
+
+    </div>
+  </section>
+
+  <script>
+    const treesContainer = document.getElementById('trees-container');
+    const categoriesList = document.getElementById('categories-list');
+    const cartList = document.getElementById('cart-list');
+    const cartTotal = document.getElementById('cart-total');
+
+    let allTrees = [
+      { id: 1, name: "Mango Tree", type: "Fruit Tree", price: 500, description: "Juicy mangoes.", image: "https://via.placeholder.com/150" },
+      { id: 2, name: "Apple Tree", type: "Fruit Tree", price: 300, description: "Red apples.", image: "https://via.placeholder.com/150" },
+      { id: 3, name: "Bamboo", type: "Ornamental", price: 200, description: "Tall bamboo.", image: "https://via.placeholder.com/150" },
+      { id: 4, name: "Oak Tree", type: "Shade Tree", price: 400, description: "Provides shade.", image: "https://via.placeholder.com/150" },
+      { id: 5, name: "Aloe Vera", type: "Medical", price: 100, description: "Healing plant.", image: "https://via.placeholder.com/150" }
+    ];
+
+    let cart = [];
+
+    // Render Categories
+    const renderCategories = () => {
+      const categories = ['All', ...new Set(allTrees.map(t => t.type))];
+      categoriesList.innerHTML = '';
+      categories.forEach(category => {
+        const li = document.createElement('li');
+        const btn = document.createElement('button');
+        btn.textContent = category;
+        btn.className = "hover:bg-green-300 p-1 rounded w-full text-left";
+        btn.addEventListener('click', () => filterTrees(category));
+        li.appendChild(btn);
+        categoriesList.appendChild(li);
+      });
+    };
+
+    // Filter trees by category
+    const filterTrees = (category) => {
+      if (category === 'All') renderTrees(allTrees);
+      else renderTrees(allTrees.filter(tree => tree.type === category));
+    };
+
+    // Render tree cards
+    const renderTrees = (trees) => {
+      treesContainer.innerHTML = '';
+      trees.forEach(tree => {
+        const card = document.createElement('div');
+        card.className = "bg-white p-4 rounded shadow space-y-2 flex flex-col justify-between";
+
+        card.innerHTML = `
+          <img src="${tree.image}" alt="${tree.name}" class="w-full h-40 object-cover rounded"/>
+          <h3 class="font-bold">${tree.name}</h3>
+          <p class="text-sm">${tree.description}</p>
+          <div class="flex justify-between items-center">
+            <span class="font-semibold bg-sky-200 text-white rounded-3xl px-2 py-1">${tree.type}</span>
+            <span>$${tree.price}</span>
+          </div>
+          <button class="w-full bg-green-600 text-white rounded-3xl py-2 mt-2 add-btn">Add to Cart</button>
+        `;
+
+        card.querySelector('.add-btn').addEventListener('click', () => addToCart(tree));
+
+        treesContainer.appendChild(card);
+      });
+    };
+
+    // Add to cart
+    const addToCart = (tree) => {
+      cart.push(tree);
+      updateCart();
+    };
+
+    // Remove from cart
+    const removeFromCart = (index) => {
+      cart.splice(index, 1);
+      updateCart();
+    };
+
+    // Update cart display
+    const updateCart = () => {
+      cartList.innerHTML = '';
+      let total = 0;
+
+      if (cart.length === 0) {
+        cartList.innerHTML = '<li class="text-gray-500">Your cart is empty</li>';
+      } else {
+        cart.forEach((item, index) => {
+          total += item.price;
+          const li = document.createElement('li');
+          li.className = "flex justify-between items-center border-b py-2";
+          li.innerHTML = `
+            <span>${item.name}</span>
+            <span>$${item.price}</span>
+            <button class="text-red-500 ml-2">&times;</button>
+          `;
+          li.querySelector('button').addEventListener('click', () => removeFromCart(index));
+          cartList.appendChild(li);
+        });
+      }
+
+      cartTotal.textContent = `Total: $${total}`;
+    };
+
+    // Initialize
+    renderCategories();
+    renderTrees(allTrees);
+  </script>
+
 </body>
 </html>
